@@ -20,7 +20,11 @@ Program can simply running by using command line to run the executable.jar file.
 Running in Java code required JavaFx and JDK11 pre-installed.
 
 ## Running demo
-using command line to run executable.jar for demo(see file: running_command.txt)
+PLEASE USING FOLLOWING COMMAND FOR RUNNING .JAR FILE
+
+REMEMBER TO CHANGE "Path-to-javafx-lib" TO YOUR OWN PATH
+
+java --module-path "Path-to-javafx-lib" --add-modules javafx.controls,javafx.fxml -jar executable.jar
 
 ## Program Description
 program functions as a calculator that support max 9*9 Matrix calculations supports pirorty calculation. Matrixs and calculation can be read from json files for computing result.
